feat: adicionando autenticação por token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+auth.jwt-secret=cb555f287534a4e53d3a6b317266a75f
+auth.jwt-expiration-miliseg=1200000
