feat: adicionando envio de email e upload de foto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,13 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=albertoaulasserratec@gmail.com
+spring.mail.password=hppx sfma bcvn ibkt
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
 auth.jwt-secret=cb555f287534a4e53d3a6b317266a75f
 auth.jwt-expiration-miliseg=1200000
