--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,10 @@
 			<artifactId>jjwt-gson</artifactId>
 			<version>0.11.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
